--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"
     />
-    <title>wc-menu-button - A simple, animating menu button</title>
+    <title>
+      wc-menu-button - A simple, animating menu button built as a Web Component
+    </title>
     <script src="/build/wc-menu-button.js"></script>
 
     <style>
